Fixed mobile header allign

--- a/style2.less
+++ b/style2.less
@@ -60,7 +60,7 @@ body {
     background-color: #2196F3;
     font-family: "Roboto Condensed";
     font-weight: 300;
-    font-size: 15pt;
+    font-size: 13pt;
     color: #888;
 }
 h3 {
@@ -100,11 +100,11 @@ a {
     z-index: 10000;
     list-style-type: none;
 }
-.menu-item, .page_item {
+.mitem {
     float: left;
     margin-right: 10pt;
     
-    font-size: 15pt;
+    font-size: 13pt;
 }
 .menu_item a, .page_item a {
     color: @brand-primary;
