--- a/style2.less
+++ b/style2.less
@@ -163,3 +163,30 @@ a {
     display: block;
     padding: 5pt;
 }
+/*
+@-webkit-keyframes vibrate {
+    from {
+        background-position-x: 0px;
+    }
+    to {
+        background-position-x: 1px;
+    }
+}
+
+body {
+    -webkit-animation-name: vibrate;
+    -webkit-animation-duration: 0.01ms; 
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+}*/
+
+.scoop {
+    border-bottom: 1px solid #111;
+}
+.scoop h2 {
+    font-size: 15pt;
+    width: 100%;
+    background-color: black;
+    color: white;
+    padding: 5pt;
+}
