--- a/style2.less
+++ b/style2.less
@@ -16,7 +16,8 @@ Use it to make something cool, have fun, and share what you've learned with othe
 @import url("css/bootstrap.css");
 @import url("http://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,300,400");
 @import url("http://fonts.googleapis.com/css?family=Cabin+Sketch:700|Roboto+Condensed:300italic,300,400");
-
+@import url("http://fonts.googleapis.com/css?family=Titillium+Web:400,900");
+@import url("http://fonts.googleapis.com/css?family=Roboto:400,900");
 #toggler {
     display: none;
 }
@@ -61,12 +62,13 @@ body {
     font-family: "Roboto Condensed";
     font-weight: 300;
     font-size: 13pt;
-    color: #888;
+    color: #111;
 }
-h3 {
+article h3 {
     font-size: 40pt;
-    font-family: "Roboto Condensed";
-    font-weight: 400;
+    font-family: "Roboto";
+    font-weight: 900;
+
 }
 h3 a {
     color: black;
@@ -81,6 +83,7 @@ h3 a {
     text-align: center;
 }
 .content {
+    padding-top: 55pt;
     background-color: white;
 }
 a {
@@ -92,13 +95,29 @@ a {
 #title {
     padding-top: 180pt;text-align: center;
 }
+#title_row h1 {
+    font-size: 70pt;
+}
 #title_row {
-    position:absolute; width:100%; top: 120pt
+    font-size: 20pt;   
+    position:absolute; width:100%; top: 0pt;
+    font-weight: bold;
+    text-shadow: 0px 1px 2px black;
+}
+.menu-main-menu-container {
+    text-align: center;
+}
+#title_row * {
+    color: white;
 }
 
 .menu, .menu-item, .page_item {
     z-index: 10000;
     list-style-type: none;
+}
+.menu-item {    
+    float: left;
+    margin-right: 10pt;
 }
 .mitem {
     float: left;
@@ -187,12 +206,24 @@ body {
 }*/
 
 .scoop {
-    border-bottom: 1px solid #111;
+    border-bottom: 1px solid @brand-primary;
 }
-.scoop h2 {
+.scoop .title {
     font-size: 15pt;
     width: 100%;
-    background-color: black;
+    background-color: @brand-primary;
     color: white;
     padding: 5pt;
+    font-family: "Roboto";
+    font-weight: 900;
+}
+.container-fluid {
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+.image-large {
+    width: 100%;
+    height: 320pt;
+    background-size: cover;
 }
