--- a/style2.less
+++ b/style2.less
@@ -63,7 +63,6 @@ article p {
     width: 100%;
     height: 100%;
     opacity: 0.25;
-    -webkit-filter: blur(10px);
     background: rgb(30,87,153); /* Old browsers */
     background: -moz-linear-gradient(left, @brand-primary 0%, @brand-secondary 100%); /* FF3.6+ */
     background: -webkit-gradient(linear, left top, right top, color-stop(0%,@brand-primary), color-stop(100%,@brand-secondary)); /* Chrome,Safari4+ */
@@ -159,7 +158,10 @@ a {
 .mitem {
     float: left;
     margin-right: 10pt;
+    padding-left: 10pt;
+    padding-right: 10pt;
 }
+
 .menu_item a, .page_item a {
     color: @brand-primary;
 }
@@ -297,4 +299,42 @@ body {
     background: -ms-linear-gradient(left, @brand-primary 0%,@brand-secondary 100%); /* IE10+ */
     background: linear-gradient(to right, @brand-primary 0%,@brand-secondary 100%); /* W3C */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#7db9e8',GradientType=1 ); /* IE6-9 */
-}  
+} 
+.btn {
+    border-radius: 5pt;
+}
+.btn-primary {
+    background: rgb(30,87,153); /* Old browsers */
+    background: -moz-linear-gradient(top,  lighten(@brand-primary, 6%) 0%, @brand-secondary 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,darken(@brand-secondary, 3%)), color-stop(100%,@brand-primary)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  lighten(@brand-primary, 6%) 0%,@brand-secondary 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  lighten(@brand-primary, 6%) 0%,@brand-secondary 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  lighten(@brand-primary, 6%) 0%,@brand-secondary 100%); /* IE10+ */
+    background: linear-gradient(to bottom,  lighten(@brand-primary, 6%) 0%,@brand-secondary 100%); /* W3C */
+    box-shadow:inset 0px 0px 3px lighten(@brand-primary, 215%);
+    
+}
+.btn-primary:hover {
+    box-shadow:inset 0px 0px 3px lighten(@brand-primary, 215%), 0px 0px 10pt rgba(255, 127, 0, 1);
+}
+.mitem-active, .btn-primary:active {
+    background: rgb(30,87,153); /* Old browsers */
+    background: -moz-linear-gradient(top,  darken(@brand-primary, 6%) 0%, @brand-secondary 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,darken(@brand-secondary, 3%)), color-stop(100%,@brand-primary)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  darken(@brand-primary, 6%) 0%,@brand-secondary 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  darken(@brand-primary, 6%) 0%,@brand-secondary 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  darken(@brand-primary, 6%) 0%,@brand-secondary 100%); /* IE10+ */
+    background: linear-gradient(to bottom,  darken(@brand-primary, 6%) 0%,@brand-secondary 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#7db9e8',GradientType=0 ); /* IE6-9 */
+    box-shadow:inset 0px 5px 15pt darken(@brand-primary, 10%), inset 0px 12pt 1pt fade(lighten(@brand-primary, 50%), 30%), 0px 0px 10pt rgba(255, 127, 0, 1);//, inset 0px 2px 1px lighten(@brand-primary, 10%);
+    
+}
+.mitem-active {
+    box-shadow:inset 0px 5px 15pt darken(@brand-primary, 10%), inset 0px 12pt 1pt fade(lighten(@brand-primary, 50%), 30%);//, inset 0px 2px 1px lighten(@brand-primary, 10%);
+    
+    // border: 1px solid darken(@brand-primary, 15%);
+}
+.mitem-active a {
+    color: white;
+    text-shadow: 0px 1px 0px black;
+}
