--- a/style2.less
+++ b/style2.less
@@ -302,6 +302,14 @@ body {
 } 
 .btn {
     border-radius: 5pt;
+    background: rgb(30,87,153); /* Old browsers */
+    background: -moz-linear-gradient(top,  #fefefe 0%, #eeeeee 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,darken(#eeeeee, 3%)), color-stop(100%, #eee)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  #fefefe 0%,#eeeeee 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  #fefefe 0%,#eeeeee 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  #fefefe 0%,#eeeeee 100%); /* IE10+ */
+    background: linear-gradient(to bottom,  #fefefe 0%,#eeeeee 100%); /* W3C */
+    box-shadow:inset 0px 0px 3px lighten(@brand-primary, 215%);
 }
 .btn-primary {
     background: rgb(30,87,153); /* Old browsers */
@@ -326,7 +334,7 @@ body {
     background: -ms-linear-gradient(top,  darken(@brand-primary, 6%) 0%,@brand-secondary 100%); /* IE10+ */
     background: linear-gradient(to bottom,  darken(@brand-primary, 6%) 0%,@brand-secondary 100%); /* W3C */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#7db9e8',GradientType=0 ); /* IE6-9 */
-    box-shadow:inset 0px 5px 15pt darken(@brand-primary, 10%), inset 0px 12pt 1pt fade(lighten(@brand-primary, 50%), 30%), 0px 0px 10pt rgba(255, 127, 0, 1);//, inset 0px 2px 1px lighten(@brand-primary, 10%);
+    box-shadow:inset 0px 5px 15pt darken(@brand-primary, 10%), inset 0px 12pt 1pt fade(lighten(@brand-primary, 50%), 30%), 0px 0px 2pt rgba(255, 127, 0, 1);//, inset 0px 2px 1px lighten(@brand-primary, 10%);
     
 }
 .mitem-active {
