--- a/style2.less
+++ b/style2.less
@@ -89,6 +89,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', e
 }
 .box {
     background-color: rgba(255, 255, 255, .6);
+    margin-bottom: 15pt;
 }
 .box-content {
     padding: 10pt;
